[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rltrees"
version = "0.0.12"
authors = [
  { name="Taha Shieenavaz", email="shieenavaz@gmail.com" },
]
description = "Sum tree and min tree implementation used particularly in reinforcement learning algorithms."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy"]
keywords = ["reinforcement learning", "sum tree", "min tree", "data structure"]
license = { file = "LICENSE" }
urls = { Homepage="https://github.com/tahashieenavaz/rltrees", Repository="https://github.com/tahashieenavaz/rltrees", Documentation="https://github.com/tahashieenavaz/rltrees#readme" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
rltrees = ["*.md", "*.txt"]
